2001-04-27  John Harper  <jsh@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	Fixed bug 7732 (opening window from prompt spawns endless
	process cycle):

	* src/nautilus-application.c (desktop_changed_callback): call
	update_session () directly

	(update_session): don't check the SHOW_DESKTOP preference to
	see if we should add ourselves to the session, check that the
	current process has actually _created_ a desktop window

	(init_session): don't register a listener for the SHOW_DESKTOP
	preference since it's called by desktop_changed_callback ()

2001-04-27  Ramiro Estrugo  <ramiro@eazel.com>

	* libnautilus-extensions/nautilus-preferences.c:
	(nautilus_self_check_preferences):
	Disabled preferences self checks until I can debug why these
	seemingly harmless tests dont work.

2001-04-27  Ramiro Estrugo  <ramiro@eazel.com>

	* components/help/hyperbola-main.c: (main): 
	Fix bug 8172 - Nautilus spews GConf error upon repeated clicking
	of "help"
	
	Intiialize preferences before creating the factory in case code in
	the factory needs to use prefernces.
	
	* src/nautilus-application.c: (nautilus_application_startup):
	Dont do the GMC migration if we are about to kill the nautilus
	shell.  Fixes criticals when 'nautilus --quit' is used.
	
2001-04-27  Andy Hertzfeld  <andy@eazel.com>

	* components/news/Makefile.am:
	* components/news/changed_bullet.png:
	added a placed holder "new article" bullet; hopefully, Arlo will
	provide us with a real one soon.
	
	* components/news/nautilus-news.c: (do_destroy), (draw_rss_items),
	(toggle_open_state), (nautilus_news_make_new_channel),
	(check_for_updates), (nautilus_news_load_images),
	(update_interval_changed), (make_news_view):
	made it use the changed bullet when appropriate; also, completed
	the preferences work by making it watch the update interval preference.
	
2001-04-27  Darin Adler  <darin@eazel.com>

	* libnautilus-extensions/nautilus-thumbnails-jpeg.c:
	(fatal_error_handler), (output_message_handler),