@@ -3,7 +3,6 @@
 	<rss_channel name="Advogato" uri="http://advogato.org/rss/articles.xml" show="false" open="false"/>
 	<rss_channel name="Beyond 2000" uri="http://beyond2000.com/b2k.rdf" show="false" open="false"/>
 	<rss_channel name="CNN" uri="http://www.cnn.com/cnn.rss" show="false" open="false"/>
-	<rss_channel name="Dan Gillmor's eJournal" uri="http://weblog.mercurycenter.com/ejournal/xml/rss.xml" show="false" open="false"/>
 	<rss_channel name="DVD Review" uri="http://www.dvdreview.com/rss/newschannel.rss" show="false" open="false"/>
 	<rss_channel name="Freshmeat" uri="http://freshmeat.net/backend/fm.rdf" show="false" open="false"/>
 	<rss_channel name="Kuro5hin" uri="http://www.kuro5hin.org/backend.rdf" show="false" open="false"/>
